apps/sales/sales.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales
  labels:
    app: sales
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sales
  template:
    metadata:
      labels:
        app: sales
    spec:
      containers:
        - name: sales
          image: "docker.io/burrsutter/hello:1.0.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
