apps/sales/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sales
  labels:
    app: sales
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: sales
